--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -21,7 +21,7 @@ html, body {
 html {
   background: rgb(240, 240, 240);
   height: 100%;
-  background: url('../images/diamonds.png') left top;
+  background: url('../images/micro_carbon.png') left top;
 }
 
 body {
@@ -41,8 +41,7 @@ a {
 }
 
 #main-content {
-  // padding-top:70px;
-  height:100%
+  height: 100%;
 }
 
 .navbar {
@@ -59,40 +58,6 @@ a {
   z-index: -1;
 }
 
-.diamond-container {
-    display: inline-block;
-    position: relative;
-
-  div.text {
-    position: relative;
-    height: 0;
-    color: white;
-    z-index: 10;
-    width: 100%;
-    text-align: center;
-  }
-
-  .diamond {
-    width: 0;
-    height: 0;
-    border: 130px solid transparent;
-    border-bottom-color: $blue;
-    position: relative;
-    top: -130px;
-
-    &:after {
-      content: '';
-      position: absolute;
-      left: -130px;
-      top: 130px;
-      width: 0;
-      height: 0;
-      border: 130px solid transparent;
-      border-top-color: $blue;
-    }
-  }
-}
-
 //
 // General Utilities
 //
@@ -103,17 +68,26 @@ a {
 
 .card {
   border: 1px solid $light-grey;
+  width: 60%;
+  min-width: 300px;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.10);
-  background-color: #FFFFFF;
-  margin: 10px 0;
+  background-color: white;
+  margin: 5% auto;
   padding: 5px;
 
   .title {
+    text-align: center;
     font-size: 24px;
-    text-decoration: none;
-    border-bottom: 1px dotted rgb(163, 163, 163);
-    width: 100%;
-    display: block
+    display: block;
+    width: 10%;
+    min-width: 100px;
+    background: rgb(0, 153, 255);
+    color: white;
+    margin: auto;
+    top: -22px;
+    position: relative;
+    padding: 5px;
+    text-transform: capitalize;
   }
 
   .card-row {
@@ -159,13 +133,13 @@ a {
 
 
 .button {
-  border: 1px solid #FFFFFF;
-  border-radius: 3px;
-  width: 100%;
-  min-height: 35px;
-  box-shadow: 0px 0px 3px #888888;
-  background: $dark-grey;
+  border: 1px solid $blue;
   color: white;
+
+  &:hover {
+    cursor: pointer;
+    text-decoration: none;
+  }
 
   &[type="submit"], &[active="true"] {
     background: $blue;
