--- a/app/assets/styles/variables.scss
+++ b/app/assets/styles/variables.scss
@@ -3,9 +3,10 @@
 // Colors
 //
 
+$light-grey: #ABABAB;
 $grey: #777;
-$light-grey: #e7e7e7;
 $dark-grey: rgb(73, 71, 71);
+$charcoal-grey: #222222;
 
 $blue: #0099ff; // gabe recommended
 $soft-blue: #5BC5E5;
