--- a/app/components/errors/errors.scss
+++ b/app/components/errors/errors.scss
@@ -1,21 +1,33 @@
+@import 'variables';
+
 #error-container {
-  padding: 20px;
+  width: 100%;
   text-align: center;
-  
+  color: $light-grey;
+
   h1 {
     font-size: 30px;
-  
-    .frown {
-      width: 100%;
-      font-size: 70px;
-      margin-top: 20px;
-      letter-spacing: 10px;
-      
+    padding: 0 10%;
+    padding-top: 15%;
+    margin: 0;
 
-      -webkit-transform: rotate(90deg);
-      -moz-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-      -o-transform: rotate(90deg);
+    .frown {
+      padding: 0 40%;
+
+      div {
+        min-width: 100px;
+        width: 10%;
+        margin: auto;
+        font-size: 70px;
+        margin-top: 20px;
+        letter-spacing: 10px;
+
+
+        -webkit-transform: rotate(90deg);
+        -moz-transform: rotate(90deg);
+        -ms-transform: rotate(90deg);
+        -o-transform: rotate(90deg);
+      }
     }
   }
 }
