--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -11,16 +11,16 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#/game_tracker">zzzz</a></li>
+        <li><a href="#/game_tracker">lorem</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> iiii <span class="caret"></span></a>
+          <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> ipsum <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="#stats/team">aaaa</a></li>
             <li><a href="#stats/league">bbbb</a></li>
             <li><a href="#stats/user">cccc</a></li>
           </ul>
         </li>
-        <li><a href="#contact">xxxx</a></li>
+        <li><a href="#contact">dolor</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
