--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -1,19 +1,35 @@
 @import 'variables';
 
+$nav-height: 70px;
 .navbar {
   background: white;
   font-size: 20px;
-  height: 70px;
+  height: $nav-height;
+  box-shadow: 0 2px 9px #515151;
 
 
   &.navbar-default {
-  border: none;
+    border: none;
+
+
+    // mobile
+    @media (max-width: 768px) {
+      text-align: right;
+
+      .navbar-header {
+        position: relative;
+        box-shadow: rgba(19, 19, 19, 0.470588) 0px -2px 10px;
+      }
+    }
+
 
     .container {
-      height: 70px;
+      height: $nav-height;
 
       // header text
       .navbar-header {
+        height: $nav-height;
+
         a {
           text-align: center;
           padding: 25px 15px;
@@ -38,6 +54,7 @@
             margin-left: 20px;
             font-size : 36px;
             letter-spacing: -10px;
+            position: relative;
 
             span {
               font-weight: bold;
@@ -46,13 +63,12 @@
         }
       }
 
-      //
-      // links
-      //
-
-      // desktop header
       .collapse {
+
+        // desktop
         @media (min-width: 768px) {
+          margin-right: 15%;
+
           a {
             text-align: center;
             width: 70px;
@@ -86,17 +102,39 @@
         }
       }
 
-      .navbar-toggle {
-        margin: 16px;
+
+      // mobile
+      @media (max-width: 768px) {
+        .navbar-toggle {
+          margin: 16px;
+          background: white;
+
+          &[aria-expanded="true"] {
+            background: $dark-grey;
+
+            .icon-bar {
+              background: none;
+
+              &:nth-of-type(odd) {
+                background: white;
+              }
+            }
+          }
+        }
       }
 
-      // mobile dropdown
       .navbar-collapse {
         &.collapsing, &.collapse.in {
 
+          // mobile
           @media (max-width: 768px) {
+            box-shadow: -10px 10px 16px rgba(19, 19, 19, 0.47);
+            z-index: 10;
             background: white;
-            box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.15);
+            width: 80%;
+            max-width: 300px;
+            display: inline-block;
+            text-align: left;
           }
         }
       }
