--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,23 +1,17 @@
 <div id="home-content">
-  <div class="name">j o h n <span>m</span> h o f r i c h t e r</div>
+  <div class="splash-floater">
+    <section class="name">
+      <div>john <span>m</span> hofrichter</div>
+    </section>
 
-<!--   <diamond><span>Developer</span></diamond>
-  <diamond>Engineer</diamond>
-  <diamond>Craftsman</diamond> -->
+    <div class="divider"><span></span></div>
 
-  <div class="diamond-container">
-  <div class="text">Developer</div>
-   <div class="diamond"></div>
- </div>
-
-  <div class="diamond-container">
-   <div class="text">Engineer</div>
-   <div class="diamond"></div>
- </div>
-
-  <div class="diamond-container">
-   <div class="text">Craftsman</div>
-   <div class="diamond"></div>
- </div>
-
+    <section class="content">
+      <div class="center-box">
+        <div class="leading">Full Stack Developer</div>
+        <a ng-href="/#/about" class="button">About</a>
+        <a ng-href="/#/contact" class="button">Contact</a>
+      </div>
+    </section>
+    </div>
 </div>
