--- a/app/components/home/home.scss
+++ b/app/components/home/home.scss
@@ -3,43 +3,92 @@
 #home-content {
   width: 100%;
   height: 100%;
-  padding-top: 50px;
+  display: table;
 
-  #hero {
-    background: url('../images/hero_left.png') no-repeat center center;
-    width: 100%;
-    height: 50%;
-    height: 350px;
-    color: white;
+  .splash-floater {
+    display: table-cell;
+    vertical-align: middle;
 
-    #sign-in-form {
-      float: right;
-      width: 45%;
-      min-width: 300px;
-      padding: 40px 5%;
+    section.name {
+      color: $blue;
+      text-transform: uppercase;
+      width: 100%;
+      display: table;
+      font-size: 2.4rem;
 
-      input {
-        &[type="email"], &[type="password"], &[type="text"] {
-          color: $grey;
+      div {
+        padding: 20px;
+        text-align: center;
+        vertical-align:middle;
+        display: table-cell;
+
+        span {
+          color: white;
         }
       }
 
-      #session-content{
-        padding: 0;
+    }
+
+    div.divider {
+      width: 30%;
+      max-width: 200px;
+      height: 1px;
+      margin: 10px auto;
+      text-align: center;
+      background: $light-grey;
+
+      span {
+        position: relative;
+        top: 0.5rem;
+
+        width: 0;
+        height: 0;
+        border-left: 0.5rem solid transparent;
+        border-right: 0.5rem solid transparent;
+
+        border-top: 0.5rem solid $blue;
       }
     }
-  }
 
-  .name {
-    font-size: 200%;
-    text-align: center;
-    padding: 0 5%;
-    color: $blue;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    section.content {
+      padding-bottom: 50px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      width: 100%;
+      display: table;
 
-    span {
-      color: white
+      .center-box {
+        text-align: center;
+        vertical-align:middle;
+        display: table-cell;
+
+        > div, > a {
+          margin-top: 30px;
+        }
+
+        .leading {
+          color: $light-grey;
+          font-size: 1.4rem;
+          display: block;
+        }
+
+        .button {
+          color: $light-grey;
+          font-size: 15px;
+          display: inline-block;
+          padding: 10px;
+          width: 120px;
+          border: 1px solid $light-grey;
+
+          &:first-of-type {
+            margin-right: -3px;
+          }
+
+          &:last-of-type {
+            margin-left: -3px;
+          }
+        }
+      }
     }
   }
 };
