--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -9,8 +9,8 @@
     <section class="content">
       <div class="center-box">
         <div class="leading">Full Stack Developer</div>
-        <a ng-href="/#/about" class="button">About</a>
-        <a ng-href="/#/contact" class="button">Contact</a>
+        <a ng-href="#about" class="button">About</a>
+        <a ng-href="#contact" class="button">Contact</a>
       </div>
     </section>
     </div>
