--- a/app/components/header/header.html
+++ b/app/components/header/header.html
@@ -11,7 +11,8 @@
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#/game_tracker">lorem</a></li>
+        <li><a href="#/">Home</a></li>
+        <li><a href="#about">About</a></li>
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> ipsum <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -20,7 +21,7 @@
             <li><a href="#stats/user">cccc</a></li>
           </ul>
         </li>
-        <li><a href="#contact">dolor</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
