partially implemented about page

--- a/app/assets/styles/variables.scss
+++ b/app/assets/styles/variables.scss
@@ -3,7 +3,7 @@
 // Colors
 //
 
-$light-grey: #ABABAB;
+$light-grey: rgb(215, 215, 215);
 $grey: #777;
 $dark-grey: rgb(73, 71, 71);
 $charcoal-grey: #222222;
