--- a/app/components/header/header.scss
+++ b/app/components/header/header.scss
@@ -94,7 +94,7 @@ $nav-height: 70px;
             }
           }
 
-          ul {
+          > ul {
             height: $nav-height;
             float: right;
           }
