--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -108,6 +108,73 @@ a {
   }
 }
 
+
+
+div.divider {
+  width: 30%;
+  max-width: 200px;
+  height: 1px;
+  margin: 10px auto;
+  text-align: center;
+  background: $light-grey;
+
+  span {
+    position: relative;
+    top: 0.5rem;
+
+    width: 0;
+    height: 0;
+    border-left: 0.5rem solid transparent;
+    border-right: 0.5rem solid transparent;
+
+    border-top: 0.5rem solid $blue;
+  }
+}
+
+.arrow {
+  &.down {
+    border-left: 1rem solid transparent;
+    border-right: 1rem solid transparent;
+    border-top: 1rem solid #0099ff;
+  }
+}
+
+.v-center {
+  display: table;
+
+  .v-center-target {
+    display: table-cell;
+    vertical-align: middle;
+  }
+}
+
+.center {
+  text-align: center;
+}
+
+ul.inline {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: inline-block;
+    padding-left: 5px;
+
+    &:before {
+      color: $dark-grey;
+      padding-right: 5px;
+      font-size: 1rem;
+      content: '◆';
+    }
+
+    &:first-of-type:before {
+      padding-right: 0;
+      content: '';
+    }
+  }
+}
+
 //
 // bootstrap overrides
 //
