added potential hero images

--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -9,16 +9,16 @@
           <span>Hello!</span>
           I am a full stack web developer hailing from the University of Pittsburgh. I started studying computer science because I had to study something. and I fell in love and never looked back. I've touched everything from Assembly to Sass and found that the web is the most exciting place to be. Programming has turned from a job, into my favorite hobby.
         </p>
-        <div class="center" ng-click="scrollTo('fun-facts');"><span class="arrow down"></span></div>
+        <div class="center" ng-click="scrollTo('fun-facts', 'standard');"><span class="arrow down"></span></div>
       </div>
     </div>
   </div>
 
   <!-- Fun Facts -->
 
-  <section class="center">
+  <section class="center" id="fun-facts">
 
-    <div class="header"  id="fun-facts">
+    <div class="header">
       <h3>Fun Facts</h3>
     </div>
 
@@ -31,7 +31,7 @@
           <li>Cycling</li>
           <li>Hiking</li>
           <li>Camping</li>
-          <li>Playig hockey and soccer</li>
+          <li>Playing hockey and soccer</li>
           <li>Watching the Pittsburgh Penguins win</li>
           <li>Good Whiskey</li>
           <li>Good Beer</li>
