--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -40,6 +40,11 @@ a {
   }
 }
 
+
+img {
+  height: inherit;
+}
+
 #main-content {
   height: 100%;
 }
@@ -152,25 +157,35 @@ div.divider {
   text-align: center;
 }
 
-ul.inline {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+ul {
 
-  li {
-    display: inline-block;
-    padding-left: 5px;
+  &.inline {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 
-    &:before {
-      color: $dark-grey;
-      padding-right: 5px;
-      font-size: 1rem;
-      content: '◆';
+    li {
+      display: inline-block;
+
+      &:first-of-type:before {
+        padding-right: 0;
+        content: '';
+      }
     }
+  }
 
-    &:first-of-type:before {
-      padding-right: 0;
-      content: '';
+  &.custom, &.inline {
+    li {
+      padding-left: 5px;
+      display: table-row;
+
+      &:before {
+        display: table-cell;
+        color: $dark-grey;
+        padding-right: 5px;
+        font-size: 1rem;
+        content: '◆';
+      }
     }
   }
 }
