--- a/app/assets/styles/variables.scss
+++ b/app/assets/styles/variables.scss
@@ -7,6 +7,7 @@ $light-grey: rgb(215, 215, 215);
 $grey: #777;
 $dark-grey: rgb(73, 71, 71);
 $charcoal-grey: #222222;
+$near-black: #151515;
 
 $blue: #0099ff; // gabe recommended
 $soft-blue: #5BC5E5;
