--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -4,7 +4,7 @@
       <div>john <span>m</span> hofrichter</div>
     </section>
 
-    <div class="divider"><span></span></div>
+    <divider></divider>
 
     <section class="content">
       <div class="center-box">
