--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -14,6 +14,7 @@ html, body {
   width: 100%;
   height: 100%;
 
+  font-weight: 200;
   font-family: 'Open Sans', sans-serif;
   font-size: 15px;
 }
@@ -21,7 +22,7 @@ html, body {
 html {
   background: rgb(240, 240, 240);
   height: 100%;
-  background: url('../images/micro_carbon.png') left top;
+  background: img("micro_carbon.png") left top;
 }
 
 body {
@@ -30,6 +31,7 @@ body {
 
 h1, h2, h3, h4 {
   margin: 5px 0;
+  font-weight: 300;
 }
 
 a {
@@ -47,6 +49,7 @@ img {
 
 #main-content {
   height: 100%;
+  width: 100%;
 }
 
 .navbar {
@@ -134,6 +137,10 @@ div.divider {
 
     border-top: 0.5rem solid $blue;
   }
+}
+div.diamond {
+  text-align: center;
+  color: $blue;
 }
 
 .arrow {
