--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -40,32 +40,44 @@
     </div>
   </section>
 
+  <divider></divider>
 
+  <section class="center" id="experience">
+    <div class="header">
+      <h3>Experience</h3>
+    </div>
+
+    <timeline target="experiences"></timeline>
+<!--
   <section class="center" id="skills">
 
     <div class="header">
-      <h3>Skills</h3>
+      <h3>skills</h3>
     </div>
 
     <div class="content">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </p>
+      <div class="content-card" ng-repeat="experience in experiences">
+        <div class="title"> <span ng-repeat="snippet in experience.title"> {{snippet}} </span> </div>
+        <div ng-show="experience.description" class="description"> {{experience.description}} </div>
+        <div class="synopsis"> <span ng-repeat="snippet in experience.synopsis">{{snippet}}</span> </div>
+      </div>
     </div>
   </section>
+
+  <section class="center" id="projects">
+
+    <div class="header">
+      <h3>Projects</h3>
+    </div>
+
+    <div class="content">
+      <div class="content-card" ng-repeat="experience in experiences">
+        <div class="title"> <span ng-repeat="snippet in experience.title"> {{snippet}} </span> </div>
+        <div ng-show="experience.description" class="description"> {{experience.description}} </div>
+        <div class="synopsis"> <span ng-repeat="snippet in experience.synopsis">{{snippet}}</span> </div>
+      </div>
+    </div>
+  </section> -->
 
   <div ng-include src="'views/footer.html'"></div>
 </div>
