--- a/app/components/about/about.scss
+++ b/app/components/about/about.scss
@@ -12,7 +12,7 @@ $background-mask: linear-gradient(
   font-size: 1.2rem;
 
   .hero {
-    background: $background-mask, url(/images/me1.jpg) no-repeat center center fixed;
+    background: $background-mask, img("hero-me.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -74,6 +74,16 @@ $background-mask: linear-gradient(
     }
   }
 
+  .divider {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    border-top: 1px solid $grey;
+
+    span {
+      border-top: none;
+    }
+  }
+
   section {
     color: $light-grey;
     max-height: $max-height;
@@ -115,11 +125,11 @@ $background-mask: linear-gradient(
       .block {
         text-align: left;
         font-size: 1.5rem;
-        margin: 40px 0;
+        margin-top: 40px;
 
         .lead {
-          font-size: 1.7rem;
-          margin-bottom: 10px;
+          font-size: 2rem;
+          margin-bottom: 25px;
           font-weight: inherit;
           text-align: center;
           color: white;
@@ -145,6 +155,54 @@ $background-mask: linear-gradient(
         padding-bottom: 10px;
         margin-bottom: 10px;
         border-bottom: 1px solid white
+      }
+
+      .content-card {
+        margin: 30px 0;
+        text-align: left;
+
+        .title, .synopsis {
+          span {
+            &:before {
+              color: $dark-grey;
+              padding: 0 5px;
+              font-size: 1rem;
+              content: '◆';
+            }
+
+
+            &:first-of-type {
+              &:before {
+                content: '';
+                padding: 0;
+              }
+            }
+          }
+        }
+
+        .title span:first-of-type {
+          color: $blue;
+          font-size: 1.4rem;
+        }
+
+        .title {
+          margin-bottom: 10px;
+          color: white;
+        }
+
+        .description {
+          padding-left: 10%;
+          margin-bottom: 10px;
+          font-size: 1rem;
+        }
+
+        .synopsis {
+          text-align: center;
+
+          span {
+            display: inline-block;
+          }
+        }
       }
     }
   }
