--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -147,7 +147,13 @@ div.diamond {
   &.down {
     border-left: 1rem solid transparent;
     border-right: 1rem solid transparent;
-    border-top: 1rem solid #0099ff;
+    border-top: 1rem solid $blue;
+  }
+
+  &.up {
+    border-left: 1rem solid transparent;
+    border-right: 1rem solid transparent;
+    border-bottom: 1rem solid $blue;
   }
 }
 
