--- a/app/components/about/partials/timeline/_timeline.html
+++ b/app/components/about/partials/timeline/_timeline.html
@@ -2,7 +2,7 @@
   <div class="timeline">
 
     <div class="line-wrap">
-      <div ng-repeat="select in targetSets.top" class="timeframe top" style="margin-left:{{select.offset}}%;width:{{select.duration}}%;">
+      <div ng-repeat="select in targetSets.top" class="timeframe top" style="margin-left:{{select.offset}}%;width:{{select.duration}}%;" active="{{select.active}}" ng-click="selectTraget(select)">
         <h3 ng-if="select.useAbbrev">{{select.heading.abbrev}}</h3>
         <h3 ng-if="!select.useAbbrev">{{select.heading.title}}</h3>
       </div>
@@ -13,7 +13,7 @@
     </div>
 
     <div class="line-wrap">
-      <div ng-repeat="select in targetSets.bottom" class="timeframe bottom" style="margin-left:{{select.offset}}%;width:{{select.duration}}%;">
+      <div ng-repeat="select in targetSets.bottom" class="timeframe bottom" style="margin-left:{{select.offset}}%;width:{{select.duration}}%;" active="{{select.active}}"  ng-click="selectTraget(select)">
         <h3 ng-if="select.useAbbrev">{{select.heading.abbrev}}</h3>
         <h3 ng-if="!select.useAbbrev">{{select.heading.title}}</h3>
       </div>
@@ -21,11 +21,12 @@
 
   </div>
   <div class="active-content">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <h2>{{active.heading.title}}<h2>
+    <h4 ng-repeat="text in active.heading.subtext">{{text}}</h4>
+    <divider ng-show="active"></divider>
+    <p>{{active.content.description}}</p>
+    <div class="synopsis">
+      <span ng-repeat="synopsis in active.content.synopsis">{{synopsis}}</span>
+    </div>
   </div>
 </div>
