--- a/app/assets/styles/variables.scss
+++ b/app/assets/styles/variables.scss
@@ -6,6 +6,7 @@
 $light-grey: rgb(215, 215, 215);
 $grey: #777;
 $dark-grey: rgb(73, 71, 71);
+$gunmetal: #303030;
 $charcoal-grey: #222222;
 $near-black: #151515;
 
