--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -1,7 +1,7 @@
 <div id="home-content">
   <div class="splash-floater">
     <section class="name">
-      <div>john <span>m</span> hofrichter</div>
+      <div><span>john m</span> hofrichter</div>
     </section>
 
     <divider></divider>
