--- a/app/components/home/home.scss
+++ b/app/components/home/home.scss
@@ -4,17 +4,19 @@
   width: 100%;
   height: 100%;
   display: table;
+  position: fixed;
 
   .splash-floater {
     display: table-cell;
     vertical-align: middle;
 
     section.name {
-      color: $blue;
+      color: white;
       text-transform: uppercase;
       width: 100%;
       display: table;
       font-size: 2.4rem;
+      font-weight: 100;
 
       div {
         padding: 20px;
@@ -45,7 +47,7 @@
         }
 
         .leading {
-          color: $light-grey;
+          color: $blue;
           font-size: 1.4rem;
           display: block;
         }
@@ -57,6 +59,12 @@
           padding: 10px;
           width: 120px;
           border: 1px solid $light-grey;
+          transition: 0.25s ease-in-out all;
+
+          &:hover {
+            background: white;
+            color: $charcoal-grey;
+          }
 
           &:first-of-type {
             margin-right: -3px;
