--- a/app/components/about/partials/timeline/_timeline.html
+++ b/app/components/about/partials/timeline/_timeline.html
@@ -1,4 +1,9 @@
 <div class="timeline-container">
+
+  <div class="header">
+    <h3>My Experience</h3>
+  </div>
+
   <div class="timeline">
 
     <div class="line-wrap">
