--- a/app/components/footer/footer.scss
+++ b/app/components/footer/footer.scss
@@ -13,12 +13,16 @@ $sprite-height: 40px;
   position: relative;
 
   .sprite-row {
-    width: 100%;
-    max-width: 500px;
+    width: 500px;
     margin: auto;
     border-top: 1px solid $grey;
     height: $line-height;
     padding-top: 15px;
+
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
 
     .sprite {
       height: $sprite-height;
