--- a/app/components/about/about.html
+++ b/app/components/about/about.html
@@ -30,8 +30,8 @@
 
   <!-- Timeline -->
 
- <!--  <row id="experience">
+  <row id="experience">
     <timeline target="experiences"></timeline>
-  </row> -->
+  </row>
 
 </div>
