--- a/app/components/about/partials/timeline/timeline.scss
+++ b/app/components/about/partials/timeline/timeline.scss
@@ -53,6 +53,10 @@
       padding: 0 10px;
       height: 50px;
 
+      h3 {
+        color: $grey;
+      }
+
       .timeframe {
         display: inline-block;
         text-align: center;
@@ -122,8 +126,8 @@
     margin: auto;
     margin-top: 30px;
     padding: 20px;
-    color: $grey;
-    font-weight: 400;
+    color: $dark-grey;
+    min-height: 350px;
 
     h2 {
       margin-bottom: 10px;
@@ -155,6 +159,8 @@
       margin-top: 25px;
 
       span {
+        font-weight: 300;
+
         &:after {
           font-size: .8rem;
           padding: 0 5px;
